--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <div class="container m-auto ">
-        <div class="lg:flex justify-center lg:space-x-10 lg:space-y-0 space-y-5">
+        <div class="lg:flex justify-center lg:space-x-10 lg:space-y-0 space-y-5" style="margin-bottom: 32px">
             <div class="space-y-5 flex-shrink-0 lg:w-7/12">
                 {% for suggested_post_and_likes in suggested_posts_and_likes reversed %}
                     <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0">
