--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -146,11 +146,11 @@
 
 
             <a href="#">
-                <img alt="" class="header-avatar" src="{{ profile.avatar.url }}">
+                <img alt="" class="header-avatar" src="{{ current_profile.avatar.url }}">
             </a>
             <div class="header_dropdown profile_dropdown border-t" uk-drop="mode: click;offset:9">
                 <ul>
-                    <li><a href="/profile/{{ profile }}">Профиль</a></li>
+                    <li><a href="/profile/{{ current_profile }}">Профиль</a></li>
                     <li><a href="/settings">Настройки</a></li>
                     <li><a href="/logout">Выход</a></li>
                 </ul>
