--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -87,7 +87,7 @@
                     <div class="col-lg-2 col-sm-3">
                         <div class="user-avatar" style="border: 0; height: 220px; width: 220px">
 
-                            <img alt="" src="{{ profile.avatar.url }}">
+                            <img alt="" src="{{ profile.avatar.url }}" >
 
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                                                  src="{{ post_and_likes_of_profile.post.profile.avatar.url }}"
                                                  width="32"
                                                  height="32"
-                                                 style="border-radius: 50%">
+                                                 style="border-radius: 50%; height: 32px; width: 32px">
                                         </a>
                                         <span class="font-semibold block ml-2">
                                 <a href="/profile/{{ post_and_likes_of_profile.post.profile }}">@{{ post_and_likes_of_profile.post.profile }}</a>
