--- a/src/templates/profile_settings.html
+++ b/src/templates/profile_settings.html
@@ -10,32 +10,129 @@
 {% block content %}
 
     <div class="container m-auto">
-        <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
-
-            <form action="" enctype="multipart/form-data" method="POST">
+        <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2 p-3">
+            <h2 class="font-bold text-black" style="font-size: 24px">Настройки профиля</h2>
+            <form action="/profile-settings/" enctype="multipart/form-data" method="post">
                 {% csrf_token %}
-                <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
-                    <div class="col-span-2">
-                        <label for=""> Profile Image</label>
-                        <img height="100" src="{{ current_profile.avatar.url }}" width="100"/>
-                        <input class="shadow-none bg-gray-100" name="image" type="file" value="">
-                    </div>
-                    <div class="col-span-2">
-                        <label for="about">Bio</label>
-                        <textarea class="shadow-none bg-gray-100" id="about" name="bio"
-                                  rows="3">{{ current_profile.bio }}</textarea>
-                    </div>
-                    <div class="col-span-2">
-                        <label for=""> Location</label>
-                        <input class="shadow-none bg-gray-100" name="location" type="text"
-                               value="{{ current_profile.location }}">
-                    </div>
+                <div class="p-3">
 
+                    <label for="name">Имя</label>
+                    <input class="mb-3 bg-gray-200" type="text" name="name" id="name" value="{{ profile.name }}">
+
+                    <label for="phone">Телефон</label>
+                    <input class="mb-3 bg-gray-200" type="tel" name="phone" id="phone">
+
+                    <label for="bio">БИО</label>
+                    <textarea class="mb-3 bg-gray-200" name="bio" id="bio"></textarea>
+
+                    <label for="avatar">Аватар</label>
+                    <img class="mb-3" src="{{ profile.avatar.url }}" width="100" height="100"/>
+                    <input class="bg-gray-200 mb-3" type="file" name="avatar" id="avatar">
+
+                    <label for="background_profile_photo">Задний фон</label>
+                    <img class="mb-3" src="{{ profile.background_profile_photo.url }}" style="height: 100px"/>
+                    <input class="bg-gray-200 mb-3" type="file" name="background_profile_photo" id="background_profile_photo">
+
+                    <label for="gender">Пол</label>
+                    <select class="mb-3 bg-gray-200" name="gender" id="gender">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                    </select>
+
+                    <label for="date_of_birth">Дата рождения</label>
+                    <input class="mb-3 bg-gray-200" type="data" name="date_of_birth" id="date_of_birth">
+
+                    <label for="website">Сайт</label>
+                    <input class="mb-3 bg-gray-200" type="text" name="website" id="website">
+
+                    <label for="country_id">Страна</label>
+                    <select class="mb-3 bg-gray-200" name="country_id" id="country_id">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                    </select>
+
+                    <label for="city_id">Город</label>
+                    <select class="mb-3 bg-gray-200" name="city_id" id="city_id">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                    </select>
+
+                    <label for="citizenship">Гражданство</label>
+                    <input class="mb-3 bg-gray-200" type="text" name="citizenship" id="citizenship">
+
+                    <label for="tin">Tin</label>
+                    <select class="mb-3 bg-gray-200" name="tin" id="tin">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                    </select>
+
+                    <label for="address">Адресс</label>
+                    <input class="mb-3 bg-gray-200" type="text" name="address" id="address">
+
+                    <label for="university">Университет</label>
+                    <input class="mb-3 bg-gray-200" type="text" name="university" id="university">
+
+                    <label for="speciality">Специальность</label>
+                    <input class="mb-3 bg-gray-200" type="text" name="speciality" id="speciality">
+
+                    <label for="ending_year">Год окончания</label>
+                    <input class="mb-3 bg-gray-200" type="data" name="ending_year" id="ending_year">
+
+                    <label for="employment_id">Employment_id</label>
+                    <select class="mb-3 bg-gray-200" name="employment_id" id="employment_id">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                    </select>
+
+                    <label for="skills">Навыки</label>
+                    <textarea class="mb-3 bg-gray-200" name="skills" id="skills"></textarea>
+
+                    <label for="work_experience">Опыт работы</label>
+                    <select class="mb-3 bg-gray-200" name="work_experience" id="work_experience">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                    </select>
+
+                    <label for="achievements">Достижения</label>
+                    <textarea class="mb-3 bg-gray-200" name="achievements" id="achievements"></textarea>
+
+                    <label for="hackathons">Хакатоны</label>
+                    <select class="mb-3 bg-gray-200" name="hackathons" id="hackathons">
+                        <option value="">1</option>
+                        <option value="">2</option>
+                    </select>
+
+
+                    <button class="button bg-blue-700 mt-3" type="submit">Сохранить</button>
                 </div>
-                <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
-                    <button class="p-2 px-4 rounded bg-gray-50 text-red-500"><a href="/static">Cancel</a></button>
-                    <button class="button bg-blue-700" type="submit"> Save</button>
-                </div>
+
+
+                {#                <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">#}
+                {##}
+                {#                     #}
+                {##}
+                {#                    <div class="col-span-2">#}
+                {#                        <label for=""> Profile Image</label>#}
+                {#                        <img src="{{ current_profile.avatar.url }}" width="100" height="100"/>#}
+                {#                        <input class="shadow-none bg-gray-100" name="image" type="file" value="">#}
+                {#                    </div>#}
+                {##}
+                {#                    <div class="col-span-2">#}
+                {#                        <label for="about">Bio</label>#}
+                {#                        <textarea class="shadow-none bg-gray-100" id="about" name="bio"#}
+                {#                                  rows="3">{{ current_profile.bio }}</textarea>#}
+                {#                    </div>#}
+                {##}
+                {#                    <div class="col-span-2">#}
+                {#                        <label for=""> Location</label>#}
+                {#                        <input class="shadow-none bg-gray-100" name="location" type="text"#}
+                {#                               value="{{ current_profile.location }}">#}
+                {#                    </div>#}
+                {##}
+                {#                </div>#}
+                {#                <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">#}
+                {#                    <button class="button bg-blue-700" type="submit"> Save</button>#}
+                {#                </div>#}
             </form>
         </div>
 
