--- a/src/templates/profile_settings.html
+++ b/src/templates/profile_settings.html
@@ -20,9 +20,9 @@
                     <input class="mb-3 bg-gray-200" type="text" name="name" id="name" value="{{ profile.name }}">
 
                     <label for="phone">Телефон</label>
-                    <input class="mb-3 bg-gray-200" type="tel" name="phone" id="phone">
+                    <input class="mb-3 bg-gray-200" type="text" name="phone" id="phone">
 
-                    <label for="bio">БИО</label>
+                    <label for="bio">Описание</label>
                     <textarea class="mb-3 bg-gray-200" name="bio" id="bio"></textarea>
 
                     <label for="avatar">Аватар</label>
@@ -35,12 +35,12 @@
 
                     <label for="gender">Пол</label>
                     <select class="mb-3 bg-gray-200" name="gender" id="gender">
-                        <option value="">1</option>
-                        <option value="">2</option>
+                        <option value="">Мужской</option>
+                        <option value="">Женский</option>
                     </select>
 
                     <label for="date_of_birth">Дата рождения</label>
-                    <input class="mb-3 bg-gray-200" type="data" name="date_of_birth" id="date_of_birth">
+                    <input class="mb-3 bg-gray-200" type="date" name="date_of_birth" id="date_of_birth">
 
                     <label for="website">Сайт</label>
                     <input class="mb-3 bg-gray-200" type="text" name="website" id="website">
@@ -60,11 +60,8 @@
                     <label for="citizenship">Гражданство</label>
                     <input class="mb-3 bg-gray-200" type="text" name="citizenship" id="citizenship">
 
-                    <label for="tin">Tin</label>
-                    <select class="mb-3 bg-gray-200" name="tin" id="tin">
-                        <option value="">1</option>
-                        <option value="">2</option>
-                    </select>
+                    <label for="tin">ИНН</label>
+                    <input class="mb-3 bg-gray-200" type="text" name="tin" id="tin">
 
                     <label for="address">Адресс</label>
                     <input class="mb-3 bg-gray-200" type="text" name="address" id="address">
@@ -76,31 +73,26 @@
                     <input class="mb-3 bg-gray-200" type="text" name="speciality" id="speciality">
 
                     <label for="ending_year">Год окончания</label>
-                    <input class="mb-3 bg-gray-200" type="data" name="ending_year" id="ending_year">
+                    <input class="mb-3 bg-gray-200" type="date" name="ending_year" id="ending_year">
 
-                    <label for="employment_id">Employment_id</label>
+                    <label for="employment_id">Тип занятости</label>
                     <select class="mb-3 bg-gray-200" name="employment_id" id="employment_id">
-                        <option value="">1</option>
-                        <option value="">2</option>
+                        <option value="">По найму</option>
+                        <option value="">На себя</option>
+                        <option value="">Без работы</option>
                     </select>
 
                     <label for="skills">Навыки</label>
                     <textarea class="mb-3 bg-gray-200" name="skills" id="skills"></textarea>
 
                     <label for="work_experience">Опыт работы</label>
-                    <select class="mb-3 bg-gray-200" name="work_experience" id="work_experience">
-                        <option value="">1</option>
-                        <option value="">2</option>
-                    </select>
+                    <input class="mb-3 bg-gray-200" type="number" name="work_experience" id="work_experience">
 
                     <label for="achievements">Достижения</label>
                     <textarea class="mb-3 bg-gray-200" name="achievements" id="achievements"></textarea>
 
                     <label for="hackathons">Хакатоны</label>
-                    <select class="mb-3 bg-gray-200" name="hackathons" id="hackathons">
-                        <option value="">1</option>
-                        <option value="">2</option>
-                    </select>
+                    <input class="mb-3 bg-gray-200" type="number" name="hackathons" id="hackathons">
 
 
                     <button class="button bg-blue-700 mt-3" type="submit">Сохранить</button>
