--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -24,7 +24,7 @@
 
 
 {% block content %}
-    <section style="margin-top: 100px;">
+    <section>
         <div class="feature-photo">
             <figure><img alt="" src="{{ profile.background_profile_photo.url }}"></figure>
             {% csrf_token %}
