--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -25,8 +25,8 @@
                         <form action="/create-project" enctype="multipart/form-data" method="POST">
                             {% csrf_token %}
 
-                            <label for="projectname">Уникальное имя проекта</label>
-                            <input class="mb-3 bg-gray-200" type="text" name="projectname" id="projectname">
+                            <label for="projectname">Уникальная название на английском</label>
+                            <input class="mb-3 bg-gray-200" placeholder="myproject" type="text" name="projectname" id="projectname">
 
                             <label for="name">Имя</label>
                             <input class="mb-3 bg-gray-200" type="text" name="name" id="name">
