--- a/src/templates/project.html
+++ b/src/templates/project.html
@@ -1,8 +1,22 @@
 {% extends 'layout.html' %}
 {% load static %}
 
+{% block head %}
+    <link href="{% static 'css/main.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/color.css' %}" rel="stylesheet">
+    <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/icons.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/uikit.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/css/tailwind.css' %}" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+{% endblock %}
+
 {% block content %}
-       <section>
+    <section>
         <div class="feature-photo">
             <figure><img alt="" src="/src/media/blank-profile-background.jpg"></figure>
             {% csrf_token %}
@@ -10,8 +24,9 @@
             <div class="add-btn flex ">
 
                 <div class="text-white font-bold flex" style="font-size: 27px">
+                    <h2 class="mr-3" style=" color: white">Автор: {{ project.profile.username}}</h2>
                     <h2 class="mr-3" style=" color: white">Постов: {{ quantities.posts }}</h2>
-                    <h2 class="mr-3" style=" color: white">Подписчиков: {{ quantities.followers }}</h2>
+                    <h2 class="mr-3" style=" color: white">Команда: {{ quantities.teammates }}</h2>
                 </div>
 
                 {% if profile == current_profile %}
@@ -19,8 +34,8 @@
                 {% else %}
 
                     {% if is_follow %}
-                        <form action="/join/{{ project }}" method="post" enctype="multipart/form-data">
-                            <input name="profile" type="hidden" value="{{ profile }}"/>
+                        <form action="/follow/{{ profile }}" method="post" enctype="multipart/form-data">
+                            <input name="method" type="hidden" value="delete"/>
 
                             <button style="background-color: #ffc0cb; border: #ffc0cb; font-size: 16px" type="submit">
                                 Отписаться
@@ -28,7 +43,7 @@
                         </form>
                     {% else %}
                         <form action="/follow/{{ profile }}" method="post" enctype="multipart/form-data">
-                            <input name="profile" type="hidden" value="{{ profile }}"/>
+                            <input name="method" type="hidden" value="post"/>
 
                             <button style="background-color: #ffc0cb; border: #ffc0cb; font-size: 16px" type="submit">
                                 Подписаться
@@ -38,6 +53,7 @@
 
                 {% endif %}
             </div>
+
 
             <div class="container-fluid">
                 <div class="row merged">
@@ -94,9 +110,9 @@
                                 </div>
 
                                 <div uk-lightbox>
-                                    <a href="{{ project.image.url }}">
+                                    <a href="">
                                         <div class="flex justify-center">
-                                            <img alt="" src="{{ project.image.url }}">
+                                            <img alt="" src="">
                                         </div>
                                     </a>
                                 </div>
@@ -191,7 +207,7 @@
                                     <div class="flex flex-1 items-center space-x-4">
                                         <a href="/project/{{ project }}">
                                             <img class="bg-gray-200 rounded-full w-10 h-10"
-                                                 src="{{ project.image.url }}">
+                                                 src="">
                                         </a>
                                         <div class="flex flex-col">
                                             <span class="block capitalize font-semibold"> {{ project }} </span>
