--- a/src/templates/profile_settings.html
+++ b/src/templates/profile_settings.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% load  tags %}
+{% load tags %}
 {% load static %}
 
 
@@ -20,10 +20,10 @@
                     <input class="mb-3 bg-gray-200" type="text" name="name" id="name" value="{{ profile.name }}">
 
                     <label for="phone">Телефон</label>
-                    <input class="mb-3 bg-gray-200" type="text" name="phone" id="phone">
+                    <input class="mb-3 bg-gray-200" type="text" name="phone" id="phone" value="{{ profile.phone }}">
 
                     <label for="bio">Описание</label>
-                    <textarea class="mb-3 bg-gray-200" name="bio" id="bio"></textarea>
+                    <textarea class="mb-3 bg-gray-200" name="bio" id="bio">{% if profile.bio %} {{profile.bio}} {% endif %}</textarea>
 
                     <label for="avatar">Аватар</label>
                     <img class="mb-3" src="{{ profile.avatar.url }}" width="100" height="100"/>
@@ -31,68 +31,80 @@
 
                     <label for="background_profile_photo">Задний фон</label>
                     <img class="mb-3" src="{{ profile.background_profile_photo.url }}" style="height: 100px"/>
-                    <input class="bg-gray-200 mb-3" type="file" name="background_profile_photo" id="background_profile_photo">
+                    <input class="bg-gray-200 mb-3" type="file" name="background_profile_photo"
+                           id="background_profile_photo">
 
                     <label for="gender">Пол</label>
-                    <select class="mb-3 bg-gray-200" name="gender" id="gender">
-                        <option value="">Мужской</option>
-                        <option value="">Женский</option>
+                    <select class="mb-3 bg-gray-200" name="gender" id="gender" value="{{ profile.gender }}">
+                        <option value="1">Мужской</option>
+                        <option value="0">Женский</option>
                     </select>
 
                     <label for="date_of_birth">Дата рождения</label>
-                    <input class="mb-3 bg-gray-200" type="date" name="date_of_birth" id="date_of_birth">
+                    <input class="mb-3 bg-gray-200" type="date" name="date_of_birth" id="date_of_birth"
+                           value="{{ profile.date_of_birth }}">
 
                     <label for="website">Сайт</label>
-                    <input class="mb-3 bg-gray-200" type="text" name="website" id="website">
+                    <input class="mb-3 bg-gray-200" type="text" name="website" id="website"
+                           value="{{ profile.website }}">
 
                     <label for="country_id">Страна</label>
-                    <select class="mb-3 bg-gray-200" name="country_id" id="country_id">
+                    <select class="mb-3 bg-gray-200" name="country_id" id="country_id" value="{{ profile.country_id }}">
                         <option value="">1</option>
                         <option value="">2</option>
                     </select>
 
                     <label for="city_id">Город</label>
-                    <select class="mb-3 bg-gray-200" name="city_id" id="city_id">
+                    <select class="mb-3 bg-gray-200" name="city_id" id="city_id" value="{{ profile.city_id }}">
                         <option value="">1</option>
                         <option value="">2</option>
                     </select>
 
                     <label for="citizenship">Гражданство</label>
-                    <input class="mb-3 bg-gray-200" type="text" name="citizenship" id="citizenship">
+                    <input class="mb-3 bg-gray-200" type="text" name="citizenship" id="citizenship"
+                           value="{{ profile.citizenship }}">
 
                     <label for="tin">ИНН</label>
-                    <input class="mb-3 bg-gray-200" type="text" name="tin" id="tin">
+                    <input class="mb-3 bg-gray-200" type="text" name="tin" id="tin" value="{{ profile.tin }}">
 
                     <label for="address">Адресс</label>
-                    <input class="mb-3 bg-gray-200" type="text" name="address" id="address">
+                    <input class="mb-3 bg-gray-200" type="text" name="address" id="address"
+                           value="{{ profile.address }}">
 
                     <label for="university">Университет</label>
-                    <input class="mb-3 bg-gray-200" type="text" name="university" id="university">
+                    <input class="mb-3 bg-gray-200" type="text" name="university" id="university"
+                           value="{{ profile.university }}">
 
                     <label for="speciality">Специальность</label>
-                    <input class="mb-3 bg-gray-200" type="text" name="speciality" id="speciality">
+                    <input class="mb-3 bg-gray-200" type="text" name="speciality" id="speciality"
+                           value="{{ profile.speciality }}">
 
                     <label for="ending_year">Год окончания</label>
-                    <input class="mb-3 bg-gray-200" type="date" name="ending_year" id="ending_year">
+                    <input class="mb-3 bg-gray-200" type="date" name="ending_year" id="ending_year"
+                           value="{{ profile.ending_year }}">
 
                     <label for="employment_id">Тип занятости</label>
-                    <select class="mb-3 bg-gray-200" name="employment_id" id="employment_id">
+                    <select class="mb-3 bg-gray-200" name="employment_id" id="employment_id"
+                            value="{{ profile.employment_id }}">
                         <option value="">По найму</option>
                         <option value="">На себя</option>
                         <option value="">Без работы</option>
                     </select>
 
                     <label for="skills">Навыки</label>
-                    <textarea class="mb-3 bg-gray-200" name="skills" id="skills"></textarea>
+                    <textarea class="mb-3 bg-gray-200" name="skills" id="skills">{{ profile.skills }}</textarea>
 
                     <label for="work_experience">Опыт работы</label>
-                    <input class="mb-3 bg-gray-200" type="number" name="work_experience" id="work_experience">
+                    <input class="mb-3 bg-gray-200" type="number" name="work_experience" id="work_experience"
+                           value="{{ profile.work_experience }}">
 
                     <label for="achievements">Достижения</label>
-                    <textarea class="mb-3 bg-gray-200" name="achievements" id="achievements"></textarea>
+                    <textarea class="mb-3 bg-gray-200" name="achievements"
+                              id="achievements">{{ profile.achievements }}</textarea>
 
                     <label for="hackathons">Хакатоны</label>
-                    <input class="mb-3 bg-gray-200" type="number" name="hackathons" id="hackathons">
+                    <input class="mb-3 bg-gray-200" type="number" name="hackathons" id="hackathons"
+                           value="{{ profile.hackathons }}">
 
 
                     <button class="button bg-blue-700 mt-3" type="submit">Сохранить</button>
