--- a/src/templates/project.html
+++ b/src/templates/project.html
@@ -20,15 +20,15 @@
 
                     {% if is_follow %}
                         <form action="/join/{{ project }}" method="post" enctype="multipart/form-data">
-                            <input name="profile" type="hidden" value="{{ profile }}"/>
+                            <input name="method" type="hidden" value="delete"/>
 
                             <button style="background-color: #ffc0cb; border: #ffc0cb; font-size: 16px" type="submit">
                                 Отписаться
                             </button>
                         </form>
                     {% else %}
-                        <form action="/follow/{{ profile }}" method="post" enctype="multipart/form-data">
-                            <input name="profile" type="hidden" value="{{ profile }}"/>
+                        <form action="/join/{{ project }}" method="post" enctype="multipart/form-data">
+                            <input name="method" type="hidden" value="post"/>
 
                             <button style="background-color: #ffc0cb; border: #ffc0cb; font-size: 16px" type="submit">
                                 Подписаться
