--- a/authentication/templates/authentication/layout.html
+++ b/authentication/templates/authentication/layout.html
@@ -14,7 +14,7 @@
     <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
     <link href="{% static 'assets/css/tailwind.css' %}" rel="stylesheet">
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100" style="height: 100vh">
 
 <header>
     <div class="header_inner">
@@ -33,7 +33,7 @@
     </div>
 </header>
 
-<div class="flex flex-col justify-between h-screen" id="wrapper">
+<div class="flex flex-col justify-between h-screen" id="wrapper" style="height: 75vh; margin-top: 150px">
     <div>
         <div class="lg:p-12 max-w-md max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-">
             <h1 class="lg:text-3xl text-xl font-semibold  mb-6">{% block h1 %}{% endblock %}</h1>
