--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="flex justify-center flex-center text-center">
                         <div class="flex flex-col choose-upload text-center">
-                            <form action="/create-post/" enctype="multipart/form-data" method="POST">
+                            <form action="/create-post" enctype="multipart/form-data" method="POST">
                                 {% csrf_token %}
 
                                 <label for="projectname">Выберете проект: </label>
